<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainQCMActivity"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    >
    <!-- Definition d un label-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/hello_nom"
            android:id="@+id/text_hello"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"

            />

        <EditText
            android:hint="@string/default_text"
            android:id="@+id/text_qcm"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_height="wrap_content"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:text="@string/hello_prenom"
            android:id="@+id/text_prenom"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"

            />
        <EditText android:hint="@string/default_text_prenom"
            android:id="@+id/text_default_prenom"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:contextClickable="false"
            android:autoText="false" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_button"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </RelativeLayout>

    <!--android:layout_margin="5dp" Creer une margin de l exterieur-->
    <!--android:padding=""  Creer une margin de linterieur-->
</LinearLayout>
